fix: Fix map on mobile adaptive

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1679,6 +1679,9 @@
 .map__mail:hover {
   color: #ef7f2f;
 }
+.map__script-mobile {
+  display: none;
+}
 
 .map__block-adaptive {
   display: none;
@@ -3410,14 +3413,22 @@ a {
     height: 46px;
     font-size: 18px;
   }
+  .map {
+    display: none;
+  }
   .map__block {
     display: none;
   }
   .map__block-adaptive {
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.45);
     display: block;
     width: 100%;
     padding: 0 32px;
     margin-bottom: 20px;
+    padding-top: 20px;
+  }
+  .map__block-adaptive iframe {
+    width: 100vw;
   }
   .map__block-adaptive br {
     display: none;
@@ -3425,18 +3436,34 @@ a {
   .map__heading-main {
     font-size: 28px;
     margin-bottom: 4px;
+    padding-left: 20px;
   }
   .map__tel {
     font-size: 20px;
   }
+  .map__daily,
+  .map__networks {
+    padding-left: 20px;
+    display: inline-block;
+  }
   .map__heading-address {
     font-size: 28px;
+    padding-left: 20px;
   }
   .map__social,
   .map__mail,
   .map__social-networks,
   .map__fromto {
     margin-bottom: 8px;
+    padding-left: 20px;
+  }
+  .map__address {
+    margin-bottom: 20px;
+    display: inline-block;
+    padding-left: 20px;
+  }
+  .reviews {
+    padding-top: 32px;
   }
   .reviews__heading {
     font-size: 28px;
