--- a/frontend/scss/adaptive.scss
+++ b/frontend/scss/adaptive.scss
@@ -1497,14 +1497,23 @@
       font-size: 18px;
     }
   }
+  .map{
+    display: none;
+  }
+
   .map__block {
     display: none;
   }
   .map__block-adaptive {
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.45);
     display: block;
     width: 100%;
     padding: 0 32px;
     margin-bottom: 20px;
+    padding-top: 20px;
+    & iframe{
+      width: 100vw;
+    }
     & br{
       display: none;
     }
@@ -1512,18 +1521,34 @@
   .map__heading-main {
     font-size: 28px;
     margin-bottom: 4px;
+    padding-left: 20px;
   }
   .map__tel {
     font-size: 20px;
   }
+  .map__daily,
+  .map__networks{
+    padding-left: 20px;
+    display: inline-block;
+  }
   .map__heading-address {
     font-size: 28px;
+    padding-left: 20px;
   }
   .map__social,
   .map__mail,
   .map__social-networks,
   .map__fromto{
     margin-bottom: 8px;
+    padding-left: 20px;
+  }
+  .map__address{
+    margin-bottom: 20px;
+    display: inline-block;
+    padding-left: 20px;
+  }
+  .reviews{
+    padding-top: 32px;
   }
   .reviews__heading {
     font-size: 28px;
